# paperlessngx-mail-parser

./: README.md  pyproject.toml
org_toweosp_paperlessngx_mail_parser/: apps.py  parsers.py  signals.py
src/paperlessngx_mail_parser/: apps.py  parsers.py  signals.py
src/paperlessngx_mail_parser/templates/: header_template.html
